Implemented pagination for Products