@@ -7,11 +7,15 @@ import io.github.bagdad.dakarhelperservice.model.Vendor;
 import io.github.bagdad.dakarhelperservice.repository.interfaces.ProductRepository;
 import io.github.bagdad.dakarhelperservice.service.interfaces.ProductService;
 import io.github.bagdad.dakarhelperservice.service.interfaces.VendorService;
-import io.github.bagdad.models.response.ProductResponse;
+import io.github.bagdad.models.response.product.Pagination;
+import io.github.bagdad.models.response.product.ProductQueryItem;
+import io.github.bagdad.models.response.product.ProductQueryResponse;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -31,18 +35,36 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public List<ProductResponse> query(ProductQuery query) {
-        List<Product> products = productRepository.query(query);
+    public ProductQueryResponse query(ProductQuery query) {
+        ProductQueryResponse productQueryResponse = new ProductQueryResponse();
 
-        if (products.isEmpty()) {
-            return Collections.emptyList();
+        Pageable pageable = PageRequest.of(
+                query.getPageIndex() != null ? query.getPageIndex() : 0,
+                query.getPageSize() != null ? query.getPageSize() : 20
+        );
+
+        Page<Product> productPage = productRepository.query(query, pageable);
+        if (productPage.isEmpty()) {
+            productQueryResponse.setProductData(List.of());
+            productQueryResponse.setPagination(Pagination.createEmptyPagination());
+            return productQueryResponse;
         }
 
         List<Vendor> vendors = vendorService.findAll();
 
-        return products.stream()
-                .map(product -> ProductHelper.mapToProductResponse(product, vendors, query.getMargin()))
+        List<ProductQueryItem> productData = productPage.stream()
+                .map(product -> ProductHelper.mapToProductQueryItem(product, vendors, query.getMargin()))
                 .toList();
+        productQueryResponse.setProductData(productData);
+
+        Pagination pagination = Pagination.builder()
+                .currentPage(productPage.getNumber())
+                .totalRecords(productPage.getTotalElements())
+                .totalPages(productPage.getTotalPages())
+                .build();
+        productQueryResponse.setPagination(pagination);
+
+        return productQueryResponse;
     }
 
     @Override
